	- Removed: Useless logs directory from both subdomain and alias Web folder skeletons
	- Updated: Apache2 logrotate configuration file (logs are now rotated daily)
	- Updated: Fcgid/PHP-FPM config to fit with servers which have at least 4GiB ram

DISTRO
	- Added: Packages file for Ubuntu Saucy Slamander and Ubuntu Trusty Tahr (experimental)

ENGINE:
	- Added: System (UNIX) user/group names are now stored in database
	- Added: IMSCP_CLEAR_SCREEN environment variable which allows to not clear the terminal screen at end of script
	- Added: SPF records for subdomains and external mail servers
	- Changed: Event listeners are now persistent. This allow to avoid self-registering
	- Changed: iMSCP::Templator renamed to iMSCP::TemplateParser
	- Changed: IP source for outbound mails is now set to the base server IP (Postfix - Temporary fix)
	- Changed: Inet protocol is now set according the base server IP type (Postfix - Temporary fix)
	- Fixed: Do not compute traffic data for disabled domains
	- Fixed: External command died with signal 9 (without core dump)
	- Fixed: iMSCP::Rights - Any target referenced by a symlink must not be affected by owner/group modification
	- Fixed: Keep current unix user uid/gid when updating the SYSTEM_USER_PREFIX and SYSTEM_USER_MIN_UID parameters
	- Fixed: Missing customer logs directories cannot be re-created (permissions denied)
	- Fixed: Pass-in domain data to the listeners which listen to the *HttpdBuildConfFile and *HttpdBuildConf events
	- Fixed: Proftpd server is down after update
	- Fixed: Removed useless file tests on directory deletion
	- Fixed: Traffic data must not be lost in case where the imscp-vrl-traff script dies for any reason
	- Fixed: Upstart/SysV init - Interoperability
	- Fixed: Usage of dynamic resolv.conf (See resolvconf(8))
	- Fixed: Wrong DNS record type for subdomain with IPv6 (A instead of AAAA)
	- Removed: Useless bind9 templates
	- Removed: Useless backup and users log directories (Httpd server impl.)