@@ -20,16 +20,7 @@
         </alternative>
     </httpd>
     <po>
-        <alternative default="courier">
-            <courier>
-                <package>courier-authlib-mysql</package>
-                <package>courier-imap</package>
-                <package>courier-imap-ssl</package>
-                <package>courier-pop</package>
-                <package>courier-pop-ssl</package>
-                <package>libgamin0</package>
-                <package>maildrop</package>
-            </courier>
+        <alternative default="dovecot">
             <dovecot>
                 <package>dovecot-core</package>
                 <package>dovecot-imapd</package>
